Add create transfer and get transfer on swagger
