# src/controllers/transferController.js
@@ -26,9 +26,7 @@ exports.getTransfersController = getTransfersController;
 function createTransfersController(req, res) {
     return __awaiter(this, void 0, void 0, function* () {
         try {
-            const { fromAccountId, toAccountId, amount } = req.body;
-            const status = "pending";
-            const createdDate = new Date();
+            const { fromAccountId, toAccountId, amount, status, createdDate } = req.body;
             const newTransfer = { fromAccountId, toAccountId, amount, status, createdDate };
             const newTransferAdded = yield (0, transfers_1.createTransfers)(newTransfer);
             res.json({
