# src/controllers/transferController.ts
@@ -12,10 +12,7 @@ export async function getTransfersController(req:Request, res : Response) {
 
 export async function createTransfersController (req: Request, res: Response) {
     try {
-        const {fromAccountId, toAccountId, amount} = req.body
-
-        const status = "pending";
-        const createdDate = new Date();
+        const {fromAccountId, toAccountId, amount, status, createdDate} = req.body
 
         const newTransfer = {fromAccountId, toAccountId, amount, status, createdDate};
 
